--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>org.icatproject</groupId>
+            <artifactId>ids.server</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>test</scope>
+            <type>test-jar</type>
+        </dependency>
     </dependencies>
 
     <build>
