--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,39 @@
                 </dependencies>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.2.1</version>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            
+<!--              <plugin> -->
+<!--                 <groupId>org.codehaus.mojo</groupId> -->
+<!--                 <artifactId>exec-maven-plugin</artifactId> -->
+<!--                 <executions> -->
+<!--                     <execution> -->
+<!--                         <phase>process-classes</phase> -->
+<!--                         <goals> -->
+<!--                             <goal>java</goal> -->
+<!--                         </goals> -->
+<!--                     </execution> -->
+<!--                 </executions> -->
+<!--                 <configuration> -->
+<!--                     <mainClass>org.icatproject.core.DocGenerator</mainClass> -->
+<!--                     <arguments> -->
+<!--                         <argument>${basedir}</argument> -->
+<!--                     </arguments> -->
+<!--                 </configuration> -->
+<!--             </plugin> -->
+
         </plugins>
 
     </build>
