--- a/src/test/resources/two.properties
+++ b/src/test/resources/two.properties
@@ -7,5 +7,12 @@ preparedCount = 100
 processQueueIntervalSeconds = 2
 rootUserNames root
 sizeCheckIntervalSeconds = 60
-reader db username root password password
 !readOnly
+
+plugin.archive.class = org.icatproject.ids.storage.ArchiveFileStorage
+plugin.archive.properties = ids.storage_file.archive.properties
+writeDelaySeconds = 6
+!compressDatasetCache
+tolerateWrongCompression
+datasetCacheSize1024bytes = 1000
+reader db username root password password
