--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 
     <organization>
         <name>The ICAT Collaboration</name>
-        <url>http://www.icatproject.org</url>
+        <url>http://icatproject.org</url>
     </organization>
 
     <repositories>
