--- a/src/test/resources/two.properties
+++ b/src/test/resources/two.properties
@@ -1,4 +1,6 @@
 icat.url = https://smfisher.esc.rl.ac.uk:8181
+plugin.zipMapper.class = org.icatproject.ids.storage.ZipMapper
+
 plugin.main.class = org.icatproject.ids.storage.MainFileStorage
 plugin.main.properties = ids.storage_file.main.properties
 cache.dir = /home/fisher/icat/cache/
@@ -15,4 +17,8 @@ writeDelaySeconds = 6
 !compressDatasetCache
 tolerateWrongCompression
 datasetCacheSize1024bytes = 1000
+
 reader db username root password password
+
+filesCheck.parallelCount = 0
+filesCheck.errorLog = MustBeHere
