--- a/src/test/resources/one.properties
+++ b/src/test/resources/one.properties
@@ -1,4 +1,6 @@
 icat.url = https://smfisher.esc.rl.ac.uk:8181
+plugin.zipMapper.class = org.icatproject.ids.storage.ZipMapper
+
 plugin.main.class = org.icatproject.ids.storage.MainFileStorage
 plugin.main.properties = ids.storage_file.main.properties
 cache.dir = /home/fisher/icat/cache/
@@ -7,5 +9,7 @@ preparedCount = 100
 processQueueIntervalSeconds = 2
 rootUserNames root
 sizeCheckIntervalSeconds = 60
-reader db username root password password
 !readOnly
+
+filesCheck.parallelCount = 0
+filesCheck.errorLog = MustBeHere
