--- a/pom.xml
+++ b/pom.xml
@@ -77,13 +77,21 @@
             <version>1.1.0-SNAPSHOT</version>
             <scope>test</scope>
             <type>test-jar</type>
-
         </dependency>
+
         <dependency>
             <groupId>org.icatproject</groupId>
             <artifactId>icat.utils</artifactId>
-            <version>4.5.0-SNAPSHOT</version>
+            <version>4.5.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.4</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
