--- a/src/test/resources/two.properties
+++ b/src/test/resources/two.properties
@@ -7,7 +7,7 @@ cache.dir = /home/fisher/icat/cache/
 preparedCacheSize1024bytes = 1000
 preparedCount = 100
 processQueueIntervalSeconds = 2
-rootUserNames root
+rootUserNames db/root
 sizeCheckIntervalSeconds = 60
 !readOnly
 
