Just need to add getLink

--- a/src/test/resources/two.properties
+++ b/src/test/resources/two.properties
@@ -17,6 +17,8 @@ writeDelaySeconds = 6
 !compressDatasetCache
 tolerateWrongCompression
 datasetCacheSize1024bytes = 1000
+minFreeSpace1024bytes = 10000
+maxFreeSpace1024bytes = 40000
 
 reader db username root password password
 
