--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,14 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.icatproject</groupId>
     <artifactId>ids.client</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
     <name>IDS client</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <repoUrl>http://www.icatproject.org/mvn/repo</repoUrl>
+        <ids.server.version>1.2.0-SNAPSHOT</ids.server.version>
     </properties>
 
     <distributionManagement>
@@ -74,7 +75,7 @@
         <dependency>
             <groupId>org.icatproject</groupId>
             <artifactId>ids.server</artifactId>
-            <version>1.1.0</version>
+            <version>${ids.server.version}</version>
             <scope>test</scope>
             <type>test-jar</type>
         </dependency>
@@ -95,6 +96,14 @@
     </dependencies>
 
     <build>
+
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <filtering>true</filtering>
+            </testResource>
+        </testResources>
+
         <plugins>
 
             <plugin>
