--- a/src/test/resources/two.properties
+++ b/src/test/resources/two.properties
@@ -17,10 +17,13 @@ writeDelaySeconds = 6
 !compressDatasetCache
 tolerateWrongCompression
 datasetCacheSize1024bytes = 1000
-minFreeSpace1024bytes = 10000
-maxFreeSpace1024bytes = 40000
+startArchivingLevel1024bytes = 5000000
+stopArchivingLevel1024bytes =  4000000
+
 
 reader db username root password password
 
 filesCheck.parallelCount = 0
 filesCheck.errorLog = MustBeHere
+
+linkLifetimeSeconds = 3600
