--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <repoUrl>http://www.icatproject.org/mvn/repo</repoUrl>
-        <ids.server.version>1.2.0-SNAPSHOT</ids.server.version>
+        <ids.server.version>1.2.0</ids.server.version>
     </properties>
 
     <distributionManagement>
@@ -59,11 +59,6 @@
     </repositories>
 
     <dependencies>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.2.0</version>
-        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
@@ -92,6 +87,11 @@
             <version>4.3.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.json</artifactId>
+            <version>1.0.4</version>
+        </dependency>
 
     </dependencies>
 
