--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.icatproject</groupId>
     <artifactId>ids.client</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <name>IDS client</name>
 
     <properties>
@@ -31,9 +31,9 @@
     </issueManagement>
 
     <scm>
-        <connection>scm:svn:http://icat-data-service.googlecode.com/svn/idsclient/trunk</connection>
-        <developerConnection>scm:svn:https://icat-data-service.googlecode.com/svn/idsclient/trunk</developerConnection>
-        <url>http://code.google.com/p/icat-data-service/source/browse/#svn%2Fidsclient%2Ftrunk</url>
+        <connection>scm:svn:http://icat-data-service.googlecode.com/svn/idsclient/tags/ids.client-1.1.0</connection>
+        <developerConnection>scm:svn:https://icat-data-service.googlecode.com/svn/idsclient/tags/ids.client-1.1.0</developerConnection>
+        <url>http://code.google.com/p/icat-data-service/source/browse/#svn%2Fidsclient%2Ftrunk/tags/ids.client-1.1.0</url>
     </scm>
 
     <licenses>
