--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,14 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.icatproject</groupId>
     <artifactId>ids.client</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.2.0-SNAPSHOT</version>
     <name>IDS client</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <repoUrl>http://www.icatproject.org/mvn/repo</repoUrl>
-        <ids.server.version>1.2.0</ids.server.version>
+        <ids.server.version>1.3.0-SNAPSHOT</ids.server.version>
     </properties>
 
     <distributionManagement>
@@ -78,7 +78,7 @@
         <dependency>
             <groupId>org.icatproject</groupId>
             <artifactId>icat.utils</artifactId>
-            <version>4.5.0</version>
+            <version>4.7.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
