--- a/src/test/resources/one.properties
+++ b/src/test/resources/one.properties
@@ -4,12 +4,12 @@ plugin.zipMapper.class = org.icatproject.ids.storage.ZipMapper
 plugin.main.class = org.icatproject.ids.storage.MainFileStorage
 plugin.main.properties = ids.storage_file.main.properties
 cache.dir = /home/fisher/icat/cache/
-preparedCacheSize1024bytes = 1000
 preparedCount = 100
 processQueueIntervalSeconds = 2
 rootUserNames db/root
 sizeCheckIntervalSeconds = 60
 !readOnly
+reader db username root password password
 
 filesCheck.parallelCount = 0
 filesCheck.errorLog = MustBeHere
