--- a/src/test/resources/two.properties
+++ b/src/test/resources/two.properties
@@ -17,6 +17,8 @@ writeDelaySeconds = 6
 datasetCacheSize1024bytes = 1000
 startArchivingLevel1024bytes = 5000000
 stopArchivingLevel1024bytes =  4000000
+storageUnit = dataset
+tidyBlockSize = 500
 
 filesCheck.parallelCount = 0
 filesCheck.errorLog = MustBeHere
