Add maxIdsInQuery property

--- a/src/test/resources/one.properties
+++ b/src/test/resources/one.properties
@@ -10,6 +10,7 @@ rootUserNames db/root
 sizeCheckIntervalSeconds = 60
 !readOnly
 reader db username root password password
+maxIdsInQuery = 1000
 
 filesCheck.parallelCount = 0
 filesCheck.errorLog = MustBeHere
