--- a/src/test/resources/two.properties
+++ b/src/test/resources/two.properties
@@ -10,6 +10,7 @@ rootUserNames db/root
 sizeCheckIntervalSeconds = 60
 !readOnly
 reader db username root password password
+maxIdsInQuery = 1000
 
 plugin.archive.class = org.icatproject.ids.storage.ArchiveFileStorage
 plugin.archive.properties = ids.storage_file.archive.properties
