--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.icatproject</groupId>
 	<artifactId>ids.client</artifactId>
-	<version>1.3.0</version>
+	<version>1.3.1-SNAPSHOT</version>
 	<name>IDS client</name>
 	<description>Client for ICAT Data Service.</description>
 
@@ -25,7 +25,7 @@
 		<connection>scm:git:https://github.com/icatproject/ids.client.git</connection>
 		<developerConnection>scm:git:https://github.com/icatproject/ids.client.git</developerConnection>
 		<url>https://github.com/icatproject/ids.client</url>
-	  <tag>v1.3.0</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<issueManagement>
